# librs232

./: .gitignore  CMakeLists.txt  README.md  SyncFork.sh
.github/workflows/: test.yml
bindings/lua/: luars232.c
doc/: example.lua
include/librs232/: rs232.h
src/: CMakeLists.txt  rs232_posix.c  rs232_windows.c
